force-app/main/default/objects/RequestTask__c/fields/RequestDestination__c.field-meta.xml
<CustomField>
    <fullName>RequestDestination__c</fullName>
    <label>依頼先</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TaskCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>神電</fullName>
            </value>
            <value>
                <fullName>伊電</fullName>
            </value>
            <value>
                <fullName>配電</fullName>
            </value>
            <value>
                <fullName>プラ建</fullName>
            </value>
            <value>
                <fullName>C電</fullName>
            </value>
            <value>
                <fullName>力電</fullName>
            </value>
            <value>
                <fullName>系電</fullName>
            </value>
            <value>
                <fullName>通電</fullName>
            </value>
            <value>
                <fullName>鎌電</fullName>
            </value>
            <value>
                <fullName>IS統</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
                <isActive>false</isActive>
                <label>その他</label>
            </value>
            <value>
                <fullName>・・・</fullName>
                <isActive>false</isActive>
                <label>・・・</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>