force-app/main/default/objects/RequestTask__c/fields/RequestDestination_other__c.field-meta.xml
<CustomField>
    <fullName>RequestDestination_other__c</fullName>
    <label>依頼先場所（依頼先で「その他」を選択した場合は入力ください）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>