force-app/main/default/objects/RequestTask__c/fields/RequestDestinationCc2__c.field-meta.xml
<CustomField>
    <fullName>RequestDestinationCc2__c</fullName>
    <label>開示場所2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>神電</fullName>
            </value>
            <value>
                <fullName>伊電長崎</fullName>
            </value>
            <value>
                <fullName>配電</fullName>
            </value>
            <value>
                <fullName>プラ建</fullName>
            </value>
            <value>
                <fullName>系電</fullName>
                <isActive>false</isActive>
                <label>系電</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>