force-app/main/default/objects/RequestTask__c/fields/RequestFactoryName__c.field-meta.xml
<CustomField>
    <fullName>RequestFactoryName__c</fullName>
    <formula>CASE( TEXT(RequestDestination__c)
,&quot;神電&quot;,&quot;神戸製作所&quot;
,&quot;伊電&quot;,&quot;伊丹製作所&quot;
,&quot;C電&quot;,&quot;コミュニケーション・ネットワーク製作所&quot;
,&quot;力電&quot;,&quot;電力システム製作所&quot;
,&quot;系電&quot;,&quot;系統変電システム製作所&quot;
,&quot;配電&quot;,&quot;受配電システム製作所&quot;
,&quot;通電&quot;,&quot;通信機製作所&quot;
,&quot;鎌電&quot;,&quot;鎌倉製作所&quot;
,&quot;IS統&quot;,&quot;インフォメーションシステム統括事業部&quot;
,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>依頼先製作所名(正式名称)</label>
    <type>Text</type>
</CustomField>