force-app/main/default/objects/RequestTask__c/fields/RequestNotification1__c.field-meta.xml
<CustomField>
    <fullName>RequestNotification1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼先通知者1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasksNotification1</relationshipName>
    <type>Lookup</type>
</CustomField>