force-app/main/default/objects/RequestTask__c/fields/RequestNotification2__c.field-meta.xml
<CustomField>
    <fullName>RequestNotification2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼先通知者2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasksNotification2</relationshipName>
    <type>Lookup</type>
</CustomField>