force-app/main/default/objects/RequestTask__c/fields/RequestNotification3__c.field-meta.xml
<CustomField>
    <fullName>RequestNotification3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼先通知者3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasksNotification3</relationshipName>
    <type>Lookup</type>
</CustomField>