force-app/main/default/objects/RequestTask__c/fields/RequestTo__c.field-meta.xml
<CustomField>
    <fullName>RequestTo__c</fullName>
    <label>依頼先CCグループ1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestDestination__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SBUGroup</valueSetName>
    </valueSet>
</CustomField>