force-app/main/default/objects/RequestTask__c/fields/RequestToCategory__c.field-meta.xml
<CustomField>
    <fullName>RequestToCategory__c</fullName>
    <label>依頼先(To/大分類)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>製作所</fullName>
            </value>
            <value>
                <fullName>プラ建</fullName>
            </value>
            <value>
                <fullName>販事・事業部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>