force-app/main/default/objects/RequestTask__c/fields/SharePoint_URL__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_URL__c</fullName>
    <label>SharePoint URL</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>