force-app/main/default/objects/RequestTask__c/fields/SkipRequestApproval__c.field-meta.xml
<CustomField>
    <fullName>SkipRequestApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>依頼先の承認省略</label>
    <type>Checkbox</type>
</CustomField>