force-app/main/default/objects/RequestTask__c/fields/Stakeholder1__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder1__c</fullName>
    <label>共有先１</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestDestination__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SBUGroup</valueSetName>
    </valueSet>
</CustomField>