force-app/main/default/objects/RequestTask__c/fields/Stakeholder2__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder2__c</fullName>
    <label>共有先２</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBUGroup</valueSetName>
    </valueSet>
</CustomField>