force-app/main/default/objects/RequestTask__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>依頼作成</fullName>
                <default>true</default>
                <label>依頼作成</label>
            </value>
            <value>
                <fullName>自部門承認中</fullName>
            </value>
            <value>
                <fullName>自部門承認済/依頼発信</fullName>
            </value>
            <value>
                <fullName>依頼先対応中</fullName>
            </value>
            <value>
                <fullName>依頼先対応済/依頼完了</fullName>
            </value>
            <value>
                <fullName>一時保存</fullName>
                <isActive>false</isActive>
                <label>一時保存</label>
            </value>
            <value>
                <fullName>完了済</fullName>
                <isActive>false</isActive>
                <label>完了済</label>
            </value>
            <value>
                <fullName>対応中</fullName>
                <isActive>false</isActive>
                <label>対応中</label>
            </value>
            <value>
                <fullName>新規</fullName>
                <isActive>false</isActive>
                <label>新規</label>
            </value>
            <value>
                <fullName>資料変更依頼</fullName>
                <isActive>false</isActive>
                <label>資料変更依頼</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>