force-app/main/default/objects/RequestTask__c/fields/TaskCategory__c.field-meta.xml
<CustomField>
    <fullName>TaskCategory__c</fullName>
    <label>依頼区分</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>提案書作成依頼</fullName>
            </value>
            <value>
                <fullName>見積照会</fullName>
            </value>
            <value>
                <fullName>原低依頼</fullName>
            </value>
            <value>
                <fullName>写真撮影依頼</fullName>
            </value>
            <value>
                <fullName>搬入依頼</fullName>
            </value>
            <value>
                <fullName>技派依頼</fullName>
            </value>
            <value>
                <fullName>製作所技術者選定依頼</fullName>
            </value>
            <value>
                <fullName>先行手配依頼</fullName>
            </value>
            <value>
                <fullName>技術者配置依頼</fullName>
            </value>
            <value>
                <fullName>その他依頼</fullName>
                <isActive>false</isActive>
                <label>その他依頼</label>
            </value>
            <value>
                <fullName>仕様承諾通知</fullName>
                <isActive>false</isActive>
                <label>仕様承諾通知</label>
            </value>
            <value>
                <fullName>原低依頼(工事)</fullName>
                <isActive>false</isActive>
                <label>原低依頼(工事)</label>
            </value>
            <value>
                <fullName>原低依頼(製作所)</fullName>
                <isActive>false</isActive>
                <label>原低依頼(製作所)</label>
            </value>
            <value>
                <fullName>図面作成依頼</fullName>
                <isActive>false</isActive>
                <label>図面作成依頼</label>
            </value>
            <value>
                <fullName>完成図書作成依頼</fullName>
                <isActive>false</isActive>
                <label>完成図書作成依頼</label>
            </value>
            <value>
                <fullName>工事コスト積算依頼</fullName>
                <isActive>false</isActive>
                <label>工事コスト積算依頼</label>
            </value>
            <value>
                <fullName>工事図面作成依頼</fullName>
                <isActive>false</isActive>
                <label>工事図面作成依頼</label>
            </value>
            <value>
                <fullName>工場立会検査調整</fullName>
                <isActive>false</isActive>
                <label>工場立会検査調整</label>
            </value>
            <value>
                <fullName>搬入調整依頼</fullName>
                <isActive>false</isActive>
                <label>搬入調整依頼</label>
            </value>
            <value>
                <fullName>搬入連絡</fullName>
                <isActive>false</isActive>
                <label>搬入連絡</label>
            </value>
            <value>
                <fullName>施工図作成依頼</fullName>
                <isActive>false</isActive>
                <label>施工図作成依頼</label>
            </value>
            <value>
                <fullName>機器搬入依頼</fullName>
                <isActive>false</isActive>
                <label>機器搬入依頼</label>
            </value>
            <value>
                <fullName>現地作業員調整依頼</fullName>
                <isActive>false</isActive>
                <label>現地作業員調整依頼</label>
            </value>
            <value>
                <fullName>現地試験成績書作成依頼</fullName>
                <isActive>false</isActive>
                <label>現地試験成績書作成依頼</label>
            </value>
            <value>
                <fullName>納入仕様書・竣工図修正依頼</fullName>
                <isActive>false</isActive>
                <label>納入仕様書・竣工図修正依頼</label>
            </value>
            <value>
                <fullName>納入仕様書作成依頼</fullName>
                <isActive>false</isActive>
                <label>納入仕様書作成依頼</label>
            </value>
            <value>
                <fullName>納期変更依頼</fullName>
                <isActive>false</isActive>
                <label>納期変更依頼</label>
            </value>
            <value>
                <fullName>製作所コスト積算依頼</fullName>
                <isActive>false</isActive>
                <label>製作所コスト積算依頼</label>
            </value>
            <value>
                <fullName>試験要領書作成依頼</fullName>
                <isActive>false</isActive>
                <label>試験要領書作成依頼</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>