force-app/main/default/objects/RequestTask__c/fields/TaskDetail__c.field-meta.xml
<CustomField>
    <fullName>TaskDetail__c</fullName>
    <description>依頼/変更依頼コメントから依頼コメントに変更_202404</description>
    <label>依頼コメント</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>