force-app/main/default/objects/RequestTask__c/fields/UnapprovedRemindNumber__c.field-meta.xml
<CustomField>
    <fullName>UnapprovedRemindNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>承認プロセス内の自動更新でインクリメントし、フローをトリガする。</description>
    <label>未承認アラート番号</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>