force-app/main/default/objects/RequestTask__c/fields/UserDeptApproved__c.field-meta.xml
<CustomField>
    <fullName>UserDeptApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>この項目にチェックが入っていた場合、自部門承認はスキップし、依頼先承認者へ承認を回します。</inlineHelpText>
    <label>自部門承認済み</label>
    <type>Checkbox</type>
</CustomField>