force-app/main/default/objects/RequestTask__c/fields/UserDeptLastApprover__c.field-meta.xml
<CustomField>
    <fullName>UserDeptLastApprover__c</fullName>
    <inlineHelpText>指定した承認者の承認後、依頼先へ情報開示及び依頼メッセージが発信されます。</inlineHelpText>
    <label>自部門最終承認者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>承認者1</fullName>
                <default>true</default>
                <label>承認者1</label>
            </value>
            <value>
                <fullName>承認者2</fullName>
            </value>
            <value>
                <fullName>承認者3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>