force-app/main/default/objects/RequestTask__c/fields/UserDeptLastApproverFormula__c.field-meta.xml
<CustomField>
    <fullName>UserDeptLastApproverFormula__c</fullName>
    <formula>IF(Approver4__c != null,&quot;承認者4&quot;,
IF( Approver3__c != null,&quot;承認者3&quot;,
IF( Approver2__c != null,&quot;承認者2&quot;,
IF( Approver1__c != null,&quot;承認者1&quot;,&quot;&quot;)
)))</formula>
    <label>自部門最終承認者</label>
    <type>Text</type>
</CustomField>