force-app/main/default/objects/RequestTask__c/validationRules/Approver1To3_MustBeDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver1To3_MustBeDifferent</fullName>
    <active>true</active>
    <description>自部門承認者1と3で同一ユーザだった場合に表示する</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Approver1__c ) ) ,Approver1__c = Approver3__c, Approver2__c != Approver3__c,Approver4__c != Approver3__c)</errorConditionFormula>
    <errorDisplayField>Approver3__c</errorDisplayField>
    <errorMessage>自部門承認者1～4に同一ユーザーを複数設定することはできません。</errorMessage>
</ValidationRule>