force-app/main/default/objects/RequestTask__c/validationRules/Approver1To4_MustBeDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver1To4_MustBeDifferent</fullName>
    <active>true</active>
    <description>自部門承認者1と4で同一ユーザだった場合に表示する</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Approver1__c ) ) ,Approver1__c = Approver4__c )</errorConditionFormula>
    <errorDisplayField>Approver4__c</errorDisplayField>
    <errorMessage>自部門承認者1～4に同一ユーザーを複数設定することはできません。</errorMessage>
</ValidationRule>