force-app/main/default/objects/RequestTask__c/validationRules/Approver2To3_MustBeDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver2To3_MustBeDifferent</fullName>
    <active>true</active>
    <description>自部門承認者2と3で同一ユーザだった場合に表示する</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Approver2__c ) ) ,Approver2__c = Approver3__c,Approver4__c != Approver3__c )</errorConditionFormula>
    <errorDisplayField>Approver3__c</errorDisplayField>
    <errorMessage>自部門承認者1～4に同一ユーザーを複数設定することはできません。</errorMessage>
</ValidationRule>