force-app/main/default/objects/RequestTask__c/validationRules/BedoreYesterdayDueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BedoreYesterdayDueDate</fullName>
    <active>true</active>
    <description>「希望回答期限」が昨日より前である際にエラーを表示する。
※依頼作成中、またはそれ以降に変更された場合のみチェック</description>
    <errorConditionFormula>AND ( 
 DueDate__c &lt;  TODAY()
, OR( ISPICKVAL(Status__c, &quot;依頼作成&quot;), ISCHANGED(DueDate__c) )
)</errorConditionFormula>
    <errorDisplayField>DueDate__c</errorDisplayField>
    <errorMessage>希望回答期限は本日以降の日を設定してください。</errorMessage>
</ValidationRule>