force-app/main/default/objects/RequestTask__c/validationRules/Mention2Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Mention2Null</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(  ApprovalPattern__c , &apos;承認者手動設定&apos;) , ISBLANK( MentionTarget2__r.Id ) )</errorConditionFormula>
    <errorMessage>承認パターンが承認者手動設定の場合、メンション先2には必ず依頼先の担当を設定してください。</errorMessage>
</ValidationRule>