force-app/main/default/objects/RequestTask__c/validationRules/RequesrDestinationNULL.validationRule-meta.xml
<ValidationRule>
    <fullName>RequesrDestinationNULL</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(ApprovalPattern__c , &apos;承認者自動設定&apos;) , 
    OR(ISPICKVAL(RequestDestination__c, &apos;神電&apos;),
        ISPICKVAL(RequestDestination__c, &apos;伊電長崎&apos;),
        ISPICKVAL(RequestDestination__c, &apos;プラ建&apos;),
        ISPICKVAL(RequestDestination__c, &apos;配電&apos;)
    ),
    ISPICKVAL(RequestTo__c , &apos;&apos;) 
)</errorConditionFormula>
    <errorMessage>承認パターンが承認者自動設定の場合、メンション先グループは必須入力です。</errorMessage>
</ValidationRule>