force-app/main/default/objects/RequestTask__c/validationRules/RequestApprover1To3_MustBeDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>RequestApprover1To3_MustBeDifferent</fullName>
    <active>true</active>
    <description>依頼先承認者1と3で同一ユーザだった場合に表示する</description>
    <errorConditionFormula>AND( NOT( ISBLANK( RequestApprover1__c ) ) ,RequestApprover1__c = RequestApprover3__c, RequestApprover2__c != RequestApprover3__c,RequestApprover4__c != RequestApprover3__c)</errorConditionFormula>
    <errorDisplayField>RequestApprover3__c</errorDisplayField>
    <errorMessage>依頼先承認者1～4に同一ユーザーを複数設定することはできません。</errorMessage>
</ValidationRule>