force-app/main/default/objects/RequestTask__c/validationRules/RequestApprover2To3_MustBeDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>RequestApprover2To3_MustBeDifferent</fullName>
    <active>true</active>
    <description>依頼先承認者2と3で同一ユーザだった場合に表示する</description>
    <errorConditionFormula>AND( NOT( ISBLANK( RequestApprover2__c ) ) ,RequestApprover2__c = RequestApprover3__c,RequestApprover4__c != RequestApprover3__c )</errorConditionFormula>
    <errorDisplayField>RequestApprover3__c</errorDisplayField>
    <errorMessage>依頼先承認者1～4に同一ユーザーを複数設定することはできません。</errorMessage>
</ValidationRule>