force-app/main/default/objects/RequestTask__c/validationRules/RequestApprover3To4_MustBeDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>RequestApprover3To4_MustBeDifferent</fullName>
    <active>true</active>
    <description>依頼先承認者3と4で同一ユーザだった場合に表示する</description>
    <errorConditionFormula>AND( NOT( ISBLANK( RequestApprover3__c ) ) ,RequestApprover3__c = RequestApprover4__c,RequestApprover2__c != RequestApprover4__c,RequestApprover1__c != RequestApprover4__c)</errorConditionFormula>
    <errorDisplayField>RequestApprover4__c</errorDisplayField>
    <errorMessage>依頼先承認者1～4に同一ユーザーを複数設定することはできません。</errorMessage>
</ValidationRule>