force-app/main/default/objects/RequestTask__c/validationRules/Rule1.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule1</fullName>
    <active>false</active>
    <description>変更依頼時コメント入力必須</description>
    <errorConditionFormula>AND(
 ISCHANGED(Status__c ) ,
 ISPICKVAL(Status__c , &apos;資料変更依頼&apos;) ,
 PRIORVALUE(TaskDetail__c ) = TaskDetail__c
)</errorConditionFormula>
    <errorDisplayField>TaskDetail__c</errorDisplayField>
    <errorMessage>資料変更依頼時のコメントを追記してください。</errorMessage>
</ValidationRule>